--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "tslint-config-standard": "^9.0.0",
     "typescript": "^3.7.2"
   },
-  "dependencies": {
-    "node-fetch": "^2.6.0"
-  }
+  "dependencies": {}
 }
